--- a/package.json
+++ b/package.json
@@ -30,5 +30,7 @@
     "seed": "^0.4.4",
     "sequelize": "^6.12.0-beta.2",
     "session": "^0.1.0"
-  }
+  },
+  "devDependencies": {},
+  "keywords": []
 }
